unpackaged/objects/copado__Static_Code_Analysis_Rule__c.object
<CustomObject>
	<fields>
		<fullName>copado__Message__c</fullName>
		<label>Message</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Priority__c</fullName>
		<description>Priority of the rule, where 1 is the highest, and 5 the lowest.</description>
		<label>Priority</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>1</fullName>
				</value>
				<value>
					<fullName>2</fullName>
				</value>
				<value>
					<fullName>3</fullName>
				</value>
				<value>
					<fullName>4</fullName>
				</value>
				<value>
					<fullName>5</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Rule_Name__c</fullName>
		<inlineHelpText>For more info, please visit: http://pmd.sourceforge.net/snapshot/pmd-apex/rules/index.html</inlineHelpText>
		<label>Rule Name</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>ApexBadCrypto</fullName>
				</value>
				<value>
					<fullName>ApexCRUDViolation</fullName>
				</value>
				<value>
					<fullName>ApexCSRF</fullName>
				</value>
				<value>
					<fullName>ApexDangerousMethods</fullName>
				</value>
				<value>
					<fullName>ApexDoc</fullName>
				</value>
				<value>
					<fullName>ApexInsecureEndpoint</fullName>
				</value>
				<value>
					<fullName>ApexOpenRedirect</fullName>
				</value>
				<value>
					<fullName>ApexSharingViolations</fullName>
				</value>
				<value>
					<fullName>ApexSOQLInjection</fullName>
				</value>
				<value>
					<fullName>ApexSuggestUsingNamedCred</fullName>
				</value>
				<value>
					<fullName>ApexUnitTestClassShouldHaveAsserts</fullName>
				</value>
				<value>
					<fullName>ApexUnitTestShouldNotUseSeeAllDataTrue</fullName>
				</value>
				<value>
					<fullName>ApexXSSFromEscapeFalse</fullName>
				</value>
				<value>
					<fullName>ApexXSSFromURLParam</fullName>
				</value>
				<value>
					<fullName>AvoidDirectAccessTriggerMap</fullName>
				</value>
				<value>
					<fullName>AvoidDeeplyNestedIfStmts</fullName>
				</value>
				<value>
					<fullName>AvoidDmlStatementsInLoops</fullName>
				</value>
				<value>
					<fullName>AvoidGlobalModifier</fullName>
				</value>
				<value>
					<fullName>AvoidHardcodingId</fullName>
				</value>
				<value>
					<fullName>AvoidNonExistentAnnotations</fullName>
				</value>
				<value>
					<fullName>AvoidLogicInTrigger</fullName>
				</value>
				<value>
					<fullName>AvoidSoqlInLoops</fullName>
				</value>
				<value>
					<fullName>ClassNamingConventions</fullName>
				</value>
				<value>
					<fullName>CyclomaticComplexity</fullName>
				</value>
				<value>
					<fullName>EmptyCatchBlock</fullName>
				</value>
				<value>
					<fullName>EmptyIfStmt</fullName>
				</value>
				<value>
					<fullName>EmptyStatementBlock</fullName>
				</value>
				<value>
					<fullName>EmptyTryOrFinallyBlock</fullName>
				</value>
				<value>
					<fullName>EmptyWhileStmt</fullName>
				</value>
				<value>
					<fullName>ExcessiveClassLength</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Rule_Reference__c</fullName>
		<label>Rule Reference</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Static_Code_Analysis_Settings__c</fullName>
		<label>Static Code Analysis Settings</label>
		<referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
		<relationshipLabel>Static Code Analysis Rules</relationshipLabel>
		<relationshipName>Static_Code_Analysis_Rules</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>Static Code Analysis Rule</label>
	<nameField>
		<displayFormat>SCAR-{0000}</displayFormat>
		<label>Static Code Analysis Rule Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Static Code Analysis Rules</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>